# SW_eracing

./: E-Racing.py  README.md  SW E-Racing.py  pull_zwift.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml  secrets.toml
inputs/: helpers.py  press_releases.py  pull_gsheet  pull_gsheet.py  pull_zwift.py  race_reports.py  rules.py
inputs/raceinfo/: Stage_1.csv  Stage_2.csv  Stage_3.csv  Stage_4.csv  Stage_5.csv  athletes.csv  handicaps.csv  live_race.csv  orange_pass.csv  points.csv  prologue.csv  stages.csv  ttt_ind.csv  ttt_team.csv
pipeline/: calcs.py  formatting.py  ttt.py
