[tool.poetry]
name = "sexy walrus eracing"
version = "0.1.0"
description = ""
authors = ["Graeme Acheson <graeme@sports4cast.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.2"

[tool.poetry.group.dev.dependencies]
numpy = "^1.26.1"
streamlit = "^1.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
